@@ -1,3 +1,0 @@
-
-## v0.5 brings more date and time supprt
-print(RcppTOML::tomlparse("dates_and_times.toml"))
