@@ -1,3 +1,10 @@
+2019-06-19  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION: Added Suggests: tinytest
+	* tests/tinytest.R: Added
+	
+	* inst/tinytest/test_dates_times.R: From tests/dates_and times.R
+
 2018-10-31  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.1.5
